[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wireless-ml-modulation-classification"
version = "0.1.0"
description = "Machine learning based modulation classification using wireless IQ signals"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "No License" }

authors = [
    { name = "badaraiah", email = "gbadaraiah@gmail.com" }
]

keywords = [
    "wireless-communications",
    "modulation-classification",
    "machine-learning",
    "signal-processing",
    "iq-samples"
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "scikit-learn>=1.2",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
